BajiDeveloperEdition/src/objects/CreditMemo__c.object
<CustomObject>
    <fields>
        <fullName>CreditAmount__c</fullName>
        <label>CreditAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditMemoStatus__c</fullName>
        <label>CreditMemoStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1 Approved(Manager)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Approved(VP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Approved(SVP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RebillAmount__c</fullName>
        <label>RebillAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CreditMemo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CreditMeno Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CreditMemos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>